# QuestionBank

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  DONE.md  Dockerfile  HANDOFF.md  LICENSE  README.md  TODO.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  vitest.config.ts
.claude/: settings.local.json
.pipelines/: config.yaml
.pipelines/scripts/: deploy-beta.sh  deploy-figures-beta.sh  deploy-figures.sh  deploy.sh  package-figures.sh  package.sh  test-after-beta.sh  test-in-code.sh
docs/client/: approach.md  grade-page-plan.md  learn-page-plan.md
docs/design/: figure-extraction-hld.md  figure-extraction-plan.md  figure-extraction-spec.md
docs/investigations/: figure-extraction.md
docs/mocks/: AGENTS.md  HANDOFF.md  add-book.css  add-book.html  attempt-summary.js  attempts-filled.html  attempts.css  edit-book.html  extract-figures.css  extract-figures.html  footer.js  grade.css  grade.html  index.html  learn.css  learn.html  manage-books.css  manage-books.html  manifest.webmanifest  mocks.css  problems-list.js  relevance.html  scan-problems.css  scan-problems.html  settings.css  (+8 more)
experiments/figure-segmentation/: .gitignore  README.md  app.py  compare_dewarp.py  dewarp.py  headless_check.py  pyproject.toml
helm/: Chart.yaml  values-beta.yaml  values-minimal.yaml  values.yaml
services/figure-service/: .dockerignore  Dockerfile  README.md  app.py  pipeline.py  pyproject.toml
services/figure-service/helm/: Chart.yaml  values.yaml
services/figure-service/helm/templates/: deployment.yaml  service.yaml
(+64 files in other folders)
