[project]
name = "figure-service"
version = "0.1.0"
description = "Page-image dewarp (UVDoc) + figure-outline detection (DocLayout-YOLO) as a Flask service"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1",
    "gunicorn>=23.0",
    "py-reform>=0.1.3",
    "doclayout-yolo>=0.0.3",
    "huggingface-hub>=0.25",
    "pillow>=10.4",
    "opencv-python-headless>=4.10",
    "numpy>=1.26",
]
# torch/torchvision come transitively via doclayout-yolo; default PyPI wheels run
# fine on CPU (we have no GPU). See docs/investigations/figure-extraction.md.
